--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@fastify/cors": "^9.0.1",
+    "@fastify/static": "^6.12.0",
     "better-sqlite3": "^9.4.3",
     "dotenv": "^16.4.5",
     "fastify": "^4.26.2",
