--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,28 @@
+# Environment variables
+.env
+.env.local
+.env.*.local
+
 # Dependencies
 node_modules/
 
-# Environment
-.env
+# Build outputs
+dist/
+build/
+*.js.map
 
-# Database
+# Database files
+data/
 *.db
 *.db-shm
 *.db-wal
 
-# Build output
-dist/
-
 # Logs
+logs/
 *.log
 npm-debug.log*
-
-# OS
-.DS_Store
-Thumbs.db
+yarn-debug.log*
+yarn-error.log*
 
 # IDE
 .vscode/
@@ -26,4 +30,17 @@ Thumbs.db
 *.swp
 *.swo
 *~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Testing
+coverage/
+.nyc_output/
+
+# Temporary files
+tmp/
+temp/
+*.tmp
 
