--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "dev": "tsx watch src/server.ts",
     "start": "tsx src/server.ts",
     "build": "tsc",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "generate-jwt": "node scripts/generate-test-jwt.js",
+    "test:stripe": "node scripts/test-with-stripe.js"
   },
   "dependencies": {
     "@fastify/cors": "^9.0.1",
