--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,24 @@
-# Environment variables
-.env
-.env.local
-.env.*.local
-
 # Dependencies
 node_modules/
 
-# Build outputs
-dist/
-build/
-*.js.map
+# Environment
+.env
 
-# Database files
-data/
+# Database
 *.db
 *.db-shm
 *.db-wal
 
+# Build output
+dist/
+
 # Logs
-logs/
 *.log
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+
+# OS
+.DS_Store
+Thumbs.db
 
 # IDE
 .vscode/
@@ -30,17 +26,4 @@ yarn-error.log*
 *.swp
 *.swo
 *~
-
-# OS
-.DS_Store
-Thumbs.db
-
-# Testing
-coverage/
-.nyc_output/
-
-# Temporary files
-tmp/
-temp/
-*.tmp
 
