demo testing & record
extra docs to be removed

--- a/env.example
+++ b/env.example
@@ -54,13 +54,20 @@ STRIPE_SECRET_KEY=sk_test_REPLACE_WITH_YOUR_STRIPE_SECRET_KEY
 #
 STRIPE_WEBHOOK_SECRET=whsec_REPLACE_WITH_YOUR_WEBHOOK_SECRET
 
-# Product Price ID
-# Get this from: https://dashboard.stripe.com/test/products
-#   1. Create a product: "ClassGuruAI Monthly Subscription"
-#   2. Add recurring price: $9.90/month
-#   3. Copy the price ID (starts with price_...)
+# Product Price IDs
+# Get these from: https://dashboard.stripe.com/test/products
 #
-STRIPE_MONTHLY_PRICE_ID=price_REPLACE_WITH_YOUR_PRICE_ID
+# Trial Plan (2-day trial for $1):
+#   1. Create a product: "ClassGuru Trial" 
+#   2. Add one-time price: $1.00 USD
+#   3. Copy the price ID
+STRIPE_TRIAL_PRICE_ID=price_REPLACE_WITH_YOUR_TRIAL_PRICE_ID
+#
+# Monthly Plan ($12.90/month):
+#   1. Create a product: "ClassGuru Monthly"
+#   2. Add recurring price: $12.90/month
+#   3. Copy the price ID
+STRIPE_MONTHLY_PRICE_ID=price_REPLACE_WITH_YOUR_MONTHLY_PRICE_ID
 
 # ----------------------------------------------------------------------------
 # Plan Configuration
@@ -76,9 +83,9 @@ MONTHLY_PLAN_CURRENCY=SGD
 # - Success: Payment completed successfully
 # - Cancel: User cancelled the payment
 #
-# For local development:
-FRONTEND_SUCCESS_URL=http://localhost:3000/payment/success
-FRONTEND_CANCEL_URL=http://localhost:3000/payment/cancel
+# For local development (served by this service):
+FRONTEND_SUCCESS_URL=http://localhost:8790/payment/success
+FRONTEND_CANCEL_URL=http://localhost:8790/payment/cancel
 
 # For production:
 # FRONTEND_SUCCESS_URL=https://yourdomain.com/payment/success
