这很难评我祝它成功吧
what is included:
1. integrate frontend files.
2. run trial test for each component
3. jwt and stripe response generation
4. mock stripe and success trial

--- a/env.example
+++ b/env.example
@@ -1,111 +1,41 @@
-# ============================================================================
-# ClassGuru Payment Service - Environment Configuration
-# ============================================================================
-# Copy this file to .env and fill in your actual values
+# ClassGuru Payment Service - Environment Variables
 
-# ----------------------------------------------------------------------------
 # Server Configuration
-# ----------------------------------------------------------------------------
 PORT=8790
+
+# Database
 DB_PATH=./data/payment.db
 
-# ----------------------------------------------------------------------------
-# JWT Authentication (for YOUR API security)
-# ----------------------------------------------------------------------------
-# This secret is used to validate JWT tokens from your mainline service
-# - For development: Can use the demo secret below
-# - For production: MUST generate a strong random secret (32+ characters)
-# 
-# Generate a secure secret:
-#   node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
-#
-JWT_SECRET=demo-secret-key-change-in-production
+# JWT Authentication (REQUIRED)
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 
-# ----------------------------------------------------------------------------
-# Stripe Configuration (for payment processing)
-# ----------------------------------------------------------------------------
-# Get these from: https://dashboard.stripe.com/test/apikeys
-#
-# IMPORTANT: These are INDEPENDENT from JWT!
-# - JWT authenticates users to YOUR service
-# - Stripe keys let YOUR service talk to Stripe
-#
-# For Testing (Test Mode):
-#   1. Sign up at https://stripe.com
-#   2. Stay in "Test mode" (toggle in top right)
-#   3. Get keys from: https://dashboard.stripe.com/test/apikeys
-#      - Secret key: sk_test_...
-#      - Publishable key: pk_test_... (not needed for backend)
-#
-# For Production (Live Mode):
-#   1. Switch to "Live mode" in Stripe Dashboard
-#   2. Get live keys (sk_live_...)
-#
-STRIPE_SECRET_KEY=sk_test_REPLACE_WITH_YOUR_STRIPE_SECRET_KEY
+# Stripe Configuration (Required unless using Mock Mode)
+STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key
+STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret
+STRIPE_MONTHLY_PRICE_ID=price_your_monthly_price_id
 
-# Webhook signing secret
-# Get this from: https://dashboard.stripe.com/test/webhooks
-#   1. Create endpoint: https://your-domain.com/webhooks/stripe
-#   2. Select events: checkout.session.completed, customer.subscription.*
-#   3. Copy the signing secret
-#
-# For local development, use ngrok or Stripe CLI
-# See STRIPE_SETUP_GUIDE.md for details
-#
-STRIPE_WEBHOOK_SECRET=whsec_REPLACE_WITH_YOUR_WEBHOOK_SECRET
-
-# Product Price IDs
-# Get these from: https://dashboard.stripe.com/test/products
-#
-# Trial Plan (2-day trial for $1):
-#   1. Create a product: "ClassGuru Trial" 
-#   2. Add one-time price: $1.00 USD
-#   3. Copy the price ID
-STRIPE_TRIAL_PRICE_ID=price_REPLACE_WITH_YOUR_TRIAL_PRICE_ID
-#
-# Monthly Plan ($12.90/month):
-#   1. Create a product: "ClassGuru Monthly"
-#   2. Add recurring price: $12.90/month
-#   3. Copy the price ID
-STRIPE_MONTHLY_PRICE_ID=price_REPLACE_WITH_YOUR_MONTHLY_PRICE_ID
-
-# ----------------------------------------------------------------------------
 # Plan Configuration
-# ----------------------------------------------------------------------------
-# These should match your Stripe product pricing
 MONTHLY_PLAN_AMOUNT=9.90
 MONTHLY_PLAN_CURRENCY=SGD
 
-# ----------------------------------------------------------------------------
-# Frontend URLs
-# ----------------------------------------------------------------------------
-# Where to redirect users after payment
-# - Success: Payment completed successfully
-# - Cancel: User cancelled the payment
-#
-# For local development (served by this service):
-FRONTEND_SUCCESS_URL=http://localhost:8790/payment/success
-FRONTEND_CANCEL_URL=http://localhost:8790/payment/cancel
+# Frontend Redirect URLs
+FRONTEND_SUCCESS_URL=http://localhost:8790/payment?status=success
+FRONTEND_CANCEL_URL=http://localhost:8790/payment?status=cancel
 
-# For production:
-# FRONTEND_SUCCESS_URL=https://yourdomain.com/payment/success
-# FRONTEND_CANCEL_URL=https://yourdomain.com/payment/cancel
+# ============================================
+# 🧪 MOCK STRIPE MODE (For Testing)
+# ============================================
+# Set MOCK_STRIPE_MODE=true to test without real Stripe credentials
+# This is perfect for development and testing!
 
-# ----------------------------------------------------------------------------
-# Notes
-# ----------------------------------------------------------------------------
-# 
-# Quick Start for Testing:
-# 1. Copy this file to .env
-# 2. Keep JWT_SECRET as-is for testing
-# 3. Replace all Stripe values with your test keys
-# 4. See STRIPE_SETUP_GUIDE.md for detailed instructions
-#
-# Production Checklist:
-# - [ ] Generate strong JWT_SECRET (32+ chars)
-# - [ ] Use Stripe live mode keys (sk_live_...)
-# - [ ] Update webhook URL to production domain
-# - [ ] Update frontend URLs to production domain
-# - [ ] Test with Stripe test cards first
-# - [ ] Enable live mode only when ready
-#
+# Enable/Disable Mock Mode
+MOCK_STRIPE_MODE=true
+
+# Choose a scenario to test:
+# - success: Simulates successful payment
+# - cancel: User cancels during checkout
+# - expired: Checkout session expires
+# - invalid_card: Card payment fails
+# - webhook_fail: Webhook processing fails
+MOCK_STRIPE_SCENARIO=success
+
