--- a/env.example
+++ b/env.example
@@ -9,7 +9,7 @@ DB_PATH=./data/payment.db
 # JWT Authentication (REQUIRED)
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 
-# Stripe Configuration (Required unless using Mock Mode)
+# Stripe Configuration (REQUIRED)
 STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key
 STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret
 STRIPE_MONTHLY_PRICE_ID=price_your_monthly_price_id
@@ -21,21 +21,4 @@ MONTHLY_PLAN_CURRENCY=SGD
 # Frontend Redirect URLs
 FRONTEND_SUCCESS_URL=http://localhost:8790/payment?status=success
 FRONTEND_CANCEL_URL=http://localhost:8790/payment?status=cancel
-
-# ============================================
-# 🧪 MOCK STRIPE MODE (For Testing)
-# ============================================
-# Set MOCK_STRIPE_MODE=true to test without real Stripe credentials
-# This is perfect for development and testing!
-
-# Enable/Disable Mock Mode
-MOCK_STRIPE_MODE=true
-
-# Choose a scenario to test:
-# - success: Simulates successful payment
-# - cancel: User cancels during checkout
-# - expired: Checkout session expires
-# - invalid_card: Card payment fails
-# - webhook_fail: Webhook processing fails
-MOCK_STRIPE_SCENARIO=success
 
