--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "type-check": "tsc --noEmit",
     "demo": "bash scripts/run-demo.sh",
     "generate-jwt": "node scripts/generate-test-jwt.js",
+    "setup-stripe": "node scripts/setup-stripe.js",
     "test:stripe": "node scripts/test-with-stripe.js",
     "kill-server": "lsof -ti :8790 | xargs kill -9 2>/dev/null || echo 'No server running on port 8790'"
   },
@@ -22,7 +23,6 @@
     "@fastify/cors": "^9.0.1",
     "@fastify/static": "^6.12.0",
     "better-sqlite3": "^9.4.3",
-    "chalk": "^5.6.2",
     "dotenv": "^16.4.5",
     "fastify": "^4.26.2",
     "jsonwebtoken": "^9.0.2",
