--- a/.env.example
+++ b/.env.example
@@ -5,8 +5,8 @@ NODE_ENV=development
 DB_PATH=./data/payment.db
 
 # Get these from: https://dashboard.stripe.com/test/apikeys
-STRIPE_SECRET_KEY=your_secret_key
-STRIPE_PUBLISHABLE_KEY=pk_test_your_public_key
+STRIPE_SECRET_KEY=sk_test_xxxxxxxxxxxx
+STRIPE_PUBLISHABLE_KEY=pk_test_xxxxxxxxxxx
 
 # Get this from: https://dashboard.stripe.com/test/webhooks
 STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
@@ -25,9 +25,10 @@ JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 # -----------------
 # Plan Config
 # -----------------
-MONTHLY_PLAN_AMOUNT=12.90
+MONTHLY_PLAN_PRO_AMOUNT=58.90
+MONTHLY_PLAN_AMOUNT=9.90
 TRIAL_PLAN_AMOUNT=1.00
-MONTHLY_PLAN_CURRENCY=SGD
+MONTHLY_PLAN_CURRENCY=USD
 
 # -----------------
 # Frontend URLs
