--- a/.env.example
+++ b/.env.example
@@ -1,34 +1,41 @@
-
 PORT=8790
 NODE_ENV=development
 
+# -----------------
+# Database
+# -----------------
 DB_PATH=./data/payment.db
 
+# -----------------
+# Stripe Config
+# -----------------
 # Get these from: https://dashboard.stripe.com/test/apikeys
-STRIPE_SECRET_KEY=sk_test_xxxxxxxxxxxx
-STRIPE_PUBLISHABLE_KEY=pk_test_xxxxxxxxxxx
+STRIPE_SECRET_KEY=sk_test_51SI
+STRIPE_PUBLISHABLE_KEY=pk_test_51SIx
 
 # Get this from: https://dashboard.stripe.com/test/webhooks
-STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
+STRIPE_WEBHOOK_SECRET=whsec_
 
 # Product Price IDs (from Stripe Dashboard > Products)
-STRIPE_MONTHLY_PRICE_ID=price_your_monthly_price_id_here
-STRIPE_TRIAL_PRICE_ID=price_your_trial_price_id_here
+STRIPE_DAILY_PRICE_ID=price_
+STRIPE_WEEKLY_PRICE_ID=price_
+STRIPE_MONTHLY_PRICE_ID=price_
 
 # -----------------
 # JWT Config
 # -----------------
 # Generate a secure random string for production
 # Example: openssl rand -base64 32
-JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+# JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+JWT_SECRET=Jlwj2CCRKCpxWn...
 
 # -----------------
 # Plan Config
 # -----------------
-MONTHLY_PLAN_PRO_AMOUNT=58.90
-MONTHLY_PLAN_AMOUNT=9.90
-TRIAL_PLAN_AMOUNT=1.00
-MONTHLY_PLAN_CURRENCY=sgd
+DAILY_PLAN_AMOUNT=1.99
+WEEKLY_PLAN_AMOUNT=9.90
+MONTHLY_PLAN_AMOUNT=14.90
+PLAN_CURRENCY=sgd
 
 # -----------------
 # Frontend URLs
