--- a/package.json
+++ b/package.json
@@ -25,9 +25,15 @@
     "better-sqlite3": "^9.4.3",
     "dotenv": "^16.4.5",
     "fastify": "^4.26.2",
+    "google-auth-library": "^9.6.3",
+    "googleapis": "^131.0.0",
     "jsonwebtoken": "^9.0.2",
     "nanoid": "^5.1.6",
     "node-fetch": "^3.3.2",
+    "pino": "^8.19.0",
+    "pino-pretty": "^11.0.0",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7",
     "stripe": "^14.21.0",
     "zod": "^3.22.4"
   },
