set docker deploy key

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 .env
 .env.local
 .env.*.local
+env.txt
 
 # Dependencies
 node_modules/
@@ -43,6 +44,11 @@ coverage/
 tmp/
 temp/
 *.tmp
+
+# SSH deploy keys (security)
+deploy_key
+*.pem
+*.key
 
 
 
