--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
     "stripe": "^14.21.0",
+    "xlsx": "^0.18.5",
     "zod": "^3.22.4"
   },
   "devDependencies": {
