--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 .env
 .env.local
 .env.*.local
-env.txt
 
 # Dependencies
 node_modules/
@@ -45,11 +44,8 @@ tmp/
 temp/
 *.tmp
 
-# SSH deploy keys (security)
-deploy_key
-*.pem
-*.key
-
+# Nested git repositories
+CG_ad_service/
 
 
 
