--- a/CG_ad_service/package.json
+++ b/CG_ad_service/package.json
@@ -27,19 +27,23 @@
   "dependencies": {
     "@fastify/cors": "^9.0.1",
     "@fastify/static": "^7.0.1",
+    "better-sqlite3": "^9.2.2",
     "dotenv": "^16.4.5",
     "fastify": "^4.26.2",
     "google-auth-library": "^9.6.3",
     "googleapis": "^131.0.0",
     "jsonwebtoken": "^9.0.2",
+    "node-cron": "^3.0.3",
     "pino": "^8.19.0",
     "pino-pretty": "^11.0.0",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.8",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.11.30",
+    "@types/node-cron": "^3.0.11",
     "@typescript-eslint/eslint-plugin": "^7.3.1",
     "@typescript-eslint/parser": "^7.3.1",
     "eslint": "^8.57.0",
